# flatpakify

./: .gitignore  LICENSE  README.md  flatpakify-check-rdeps.py  flatpakify-clean-precompiled.py  flatpakify-with-portage.sh  flatpakify.py  meson.build
